2005-07-25  William Jon McCann  <mccann@jhu.edu>

	* .cvsignore: Added depcomp and stamp-h1

	* daemon/slave.c (ask_migrate) 
	(gdm_slave_check_user_wants_to_log_in):
	* daemon/gdm.[ch] (gdm_config_parse): 
	* config/gdm.conf.in:
	Add a configuration option AlwaysLoginCurrentSession
	that will automatically switch the user back to their
	previous session without asking.  This is off by
	default for now.  Fixes bug #311415.

2005-07-25  William Jon McCann  <mccann@jhu.edu>

	* gui/gdmcommon.c (gdm_common_get_config_file): Don't return
	a pointer into the middle of a string that must be freed.
	Fixes bug #311499.

	* gui/gdmphotosetup.c (main): Free config file string again.

2005-07-25  William Jon McCann  <mccann@jhu.edu>

	* daemon/gdm.c: Fix build by only using GDM_KEY_MULTICAST
	when IPV6 is enabled.

2005-07-25  William Jon McCann  <mccann@jhu.edu>

	* gui/faces/butterfly.png: Somehow missed adding this file.
	* gui/faces/.cvsignore: Add file.

2005-07-24  William Jon McCann  <mccann@jhu.edu>

	* gui/greeter/greeter_item_ulist.c (check_for_displays) 
	(greeter_generate_userlist, greeter_populate_user_list):
	A few more tweaks to the face browser.

	* gui/gdmphotosetup.c (maybe_migrate_old_config): Fix leak.
	(main): Freeing result of gdm_common_get_config file
	causes memory corruption.  So, don't free it until
	we find the problem.

2005-07-24  William Jon McCann  <mccann@jhu.edu>

	* gui/faces/Makefile.am:
	* gui/face/dice.jpg:
	* gui/face/sky.jpg: Updated images.

	* gui/face/astronaut.jpg:
        * gui/face/baseball.png:
        * gui/face/butterfly.png:
        * gui/face/cat-eye.jpg:
        * gui/face/chess.jpg:
        * gui/face/coffee.jpg:
        * gui/face/energy-arc.jpg:
        * gui/face/fish.jpg:
        * gui/face/flake.jpg:
        * gui/face/flower.jpg:
        * gui/face/grapes.jpg:
        * gui/face/guitar.jpg:
        * gui/face/launch.jpg:
        * gui/face/leaf.jpg:
        * gui/face/lightning.jpg:
        * gui/face/penguin.jpg: