@@ -1,3 +1,8 @@
+2005-07-25  Brian Cameron  <brian.cameron@sun.com>
+
+	* config/Makefile.am:  Now installs gdm.conf to
+	  /usr/share/gdm.
+
 2005-07-25  William Jon McCann  <mccann@jhu.edu>
 
 	* .cvsignore: Added depcomp and stamp-h1
